# M811-Configurator

./: .gitignore  M811.dump  M811.json  README.md  TODO.md  button_widget.py  downloader.py  example.py  main.py  main_window.py  mouse.py  mouse_image.py  original.dump  pyproject.toml  requirements.txt  test.py  vertical_tab_wiget.py
ui/: button_widget.py  buttons_widget.py  config.py  downloader.py  dump_analyzer.py  keyboard.py  main_window.py  mouse_config.py  mouse_data.py  mouse_image.py  mouse_selector_widget.py  redragon_mouse.py  vertical_tab_wiget.py
ui/dump_analyzer/: byte_info_widget.py  dump_analyzer.py  emoji_line_edit.py  hex_viewer.py  history_widget.py  section.py  section_list.py  section_list_widget.py  section_value.py  section_value_widget.py  section_widget.py  sections_widget.py  spin_box.py  usb.py  usb_progress_window.py
ui/dump_analyzer/section_widgets/: array_section_widget.py  clipboard.py  list_section_widget.py  section_types.py  section_widget.py  value_section_widget.py
ui/dump_analyzer/sections/: array_section.py  list_section.py  parent_section.py  section.py  value_section.py
ui/tools/: decode.py
